# synology-thumbnail-generator

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  docker.yml
src/: main.rs  thumbnail.rs
