[package]
name = "synology-thumbnail-generator"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
imagesize = "0.12.0"
opencv = "0.92.0"
rayon = "1.10.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
